# irrapp

./: .gitignore  devenv.nix  package-lock.json  pyproject.toml
conf/base/: catalog.yml  parameters_ingest.yml
notebooks/: test.py
src/irrapp/: __init__.py  __main__.py  app.py  object_registry.py  settings.py  utils.py
src/irrapp/pipelines/ingest/: __init__.py  nodes.py  pipeline.py
tests/pipelines/ingest/: test_pipeline.py
ui/: package-lock.json  package.json
ui/src/: App.jsx  main.jsx
ui/src/components/: CountryFilter.jsx  Header.jsx  Sidebar.jsx
ui/src/lib/: apollo.js
ui/src/store/: sidebarStore.js
