[project]
name = "irrapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ariadne>=0.26.2",
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "kedro>=0.19.14",
    "kedro-datasets>=7.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "uvicorn>=0.35.0",
]

[tool.kedro]
package_name = "irrapp"
project_name = "irrapp"
kedro_init_version = "0.19.14"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "irrapp.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]

[tool.kedro_telemetry]
project_id = "83618a8d7af4446088e7d5e879dd0ea6"
